[metadata]
name = mucbtagfileprep
version = 0.0.1
#url = https://github.com/kkrizka/kkroot
description = Preparation of input files for uC b-tagging studies.
long_description = file: README.md
long_description_content_type = text/markdown
author = Karol Krizka
author_email = kkrizka@gmail.com
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	    Operating System :: OS Independent

[options]
install_requires =
    uproot
    h5py
    kkconfig